GNOME Bugzilla – Bug 776524
GtkAboutDialog: Fix formatting of example email address in html documentation
Last modified: 2016-12-30 15:37:17 UTC
Created attachment 342505 [details] [review] GtkAboutDialog-Fix-email-example-formatting.patch Example email in Description is not displayed correctly in html document: To specify a person with an email address, use a string like "Edgar Allan Poe <edgarpoe.com >". Fixed by escaping @.