GtkAboutDialog: Fix formatting of example email address in html

Signed-off-by: Chris Mayo <aklhfex@gmail.com>

https://bugzilla.gnome.org/show_bug.cgi?id=776524